[package]
name = "awala-vpn-shield"
version = "0.1.0"
edition = "2021"
authors = [ "Relaycorp <https://relaycorp.tech>" ]
description = "Awala VPN Gateway Shield"
repository = "https://github.com/AwalaApp/vpn-shield"
license-file = "LICENSE"
publish = false

[package.metadata.release]
release = false

[dependencies]
axum = "0.7.9"
tokio = { version = "1.42.0", features = ["full"] }
anyhow = "1.0.95"

[dev-dependencies]
axum-test = "16.4.1"
